--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
@@ -9,11 +9,18 @@ periodo=Peri\u00f3do de Liquidacion:
 estructura=Estructura Liquidada:
 buscar=Buscar Empleado
 mostrar=Mostrar Todos
-#ToolBar
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
 filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
 #Tabla de Abajo 1
 empleador=Empleador
 descripcion=Descripcion
@@ -62,3 +69,5 @@ terceroE=Nombre_del_Tercero
 fechapago=Fecha_Pago
 #Sin registros
 sinregistros=Sin Registros
+salir=Salir
+estructuraFormula=Estructura de la Formula
