--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
@@ -141,3 +141,10 @@ manejasubcuentaX=Maneja_Sub_Cuenta
 I.C.CX=I.C.C.
 c.cX=C.C.
 salir=Salir
+textN=La cuenta maneja NIT
+textC=La cuenta maneja c.c. del empleado
+textP=La cuenta maneja prorrateo
+textCC=En el procedimiento de la interface maneja el centro costo del acumulado
+textICC=El centro costo hace parte de la cuenta contable
+textE=Consolida NIT empresa
+textI=Incluye ShorName
