--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
@@ -144,3 +144,4 @@ centroCostoCreditoM=Centros Costos
 buscarCCC=Buscar Centro Costo: 
 textTT=Indique si el comprobante fue entregado y/o pagado fisicamente al empleado
 entregadoC=\u00bfEntregado a empleado?:
+errorFechaEntregaNull=La fecha entregado no puede ser vacia si el campo Entregado a Empleado esta seleccionado
