--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
@@ -176,3 +176,6 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorDatosNullTerceros=Los campos NIT - Nombre son obligatorios.
+errorDatosNullSucursal=El campo Codigo Sucursal es obligatorio
+salir=Salir
