--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -115,16 +115,16 @@ textRET=Retiro
 textTDA=Traslado desde otra administradora
 textTAA=Traslado a otra administradora
 textVSP=Variacion permanente de salario
-textVTE=
+textVTE=...
 textVST=Variacion transitoria de salario
 textSLN=Suspencion temporal del contrato o licencia no remunerada
-textIGE=
-textLMA=
+textIGE=...
+textLMA=...
 textVCA=Vacaciones
 textAVP=Aporte voluntario
 textVCT=Variacion centro de trabajo
 textIRP=Incapacidad por accidente de trabajo o enfermedad profesional
-textSUS=
+textSUS=...
 textINTE=Integral
 tarifaEPS=Tarifa EPS
 tarifaAAFP=Tarifa AAFP
