--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes.properties
@@ -147,3 +147,4 @@ jefedivisionXX=Jefe_Division
 rodamientoX=Rodamiento
 enviomasivoX=Envio Masivo
 enviomasivoXX=Envio_Masivo
+repetido=No puede existir dos c\u00f3digos de reporte iguales para un m\u00f3dulo. Por favor ingrese otro c\u00f3digo o cambie el m\u00f3dulo
