--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -13,7 +13,20 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
+#NuevoRegistro
 nuevo=Nuevo Ausentismo
+tipoN=Tipo: 
+claseN=Clase: 
+causaN=Causa: 
+diasN=Dias: 
+horasN=Horas: 
+iausenciaN=I. Ausencia: 
+fausenciaN=F. Ausencia: 
+expedicionN=Expedici\u00f3n: 
+ipagoN=I. Pago: 
+fpagoN=F. Pago: 
+bliquidacionN=B. Liquidacion: 
+fliquidacionN=F. Liquidacion: 
 eliminar=Borrar Ausentismo
 duplicar=Duplicar Ausentismo
 rastro=Rastro
@@ -60,7 +73,7 @@ cdiagnostico=C.D
 prorroga=Prorroga
 periodo=Periodo
 tercero=Tercero
-observaciones=Observaciones
+observaciones=Observaci\u00f3n
 #TooltipsAbajo
 tia=Fecha de inicio de la ausencia
 tfa=Fecha de finalizacion de la ausencia
@@ -95,6 +108,18 @@ porcentaje=Porcentaje
 #LOVS
 tiposausentismo=Tipos Ausentismo
 descripcion=Descripcion
+empleados=Empleados
+buscarE=Buscar Empelado: 
+porcentajes=Porcentajes
+buscarP=Buscar Porcentaje: 
+causasausentismosCA=Causas Ausentismos
+buscarCA=Buscar Causa: 
+clasesausentismosCL=Clases Ausentismos
+buscarCL=Buscar Clase: 
+tiposausentismosTA=Tipos Ausentismos
+buscarTA=Buscar Tipo: 
+ibscI=IBCS
+buscarI=Buscar IBCS: 
 #Exportar
 tipoE=Tipo
 claseE=Clase
@@ -130,3 +155,18 @@ fechanotificacion=Fecha Notificacion
 diagnosticos=Diagnosticos
 hora=Hora
 reportada=Reportada a la Entidad
+#LOV Formas Pagos
+formaspagosF=Formas Pagos
+buscarF=Buscar Forma Pago: 
+#LOV ACCIDENTES
+accidentesA=Accidentes
+buscarA=Buscar Accidente: 
+#LOV ENFERMEDADES
+enfermedadesEN=Enfermedades
+buscarEN=Buscar Enfermedad: 
+#LOV PRORROGA
+prorrogasP=Prorrogas
+buscarP=Buscar Prorroga: 
+#LOV Diagnosticos
+diagnosticosD=Diagnosticos
+buscarD=Buscar Diagnostico: 
