--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -140,7 +140,7 @@ egAutorizacion=EG Autorizacion
 maternidadValor=Maternidad Valor
 maternidadAuto=Maternidad Autorizacion
 upcValor=UPC Valor
-tipo=Tipo
+tipo=Tipo Empleado
 textTP=Tipo de Pensionado
 textPC=Pension Compartida
 textEXTR=Extranjero
@@ -334,3 +334,5 @@ procesoLiquidacionOK=\u00bf Desea continuar con el proceso de liquidacion ?
 confirmarBorrarTodoAuto=\u00bf Esta seguro de borrar ?
 errorAcumularDiferencia=El periodo a procesar de autoliquidaciones no coincide con la fecha hasta de ParametrosReportes y ParametrosLiquidacion. Por favor cambie las fechas para que coincidan con el periodo.
 acumularDiferenciaOK=\u00bf Desea continuar con el proceso ?
+headerIbc=Valor IBC
+editarTipoEntidadD=Tipo Entidad
