--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -165,8 +165,11 @@ buscarA=Buscar Accidente:
 enfermedadesEN=Enfermedades
 buscarEN=Buscar Enfermedad: 
 #LOV PRORROGA
-prorrogasP=Prorrogas
-buscarP=Buscar Prorroga: 
+prorrogasPR=Prorrogas
+buscarPR=Buscar Prorroga: 
 #LOV Diagnosticos
 diagnosticosD=Diagnosticos
 buscarD=Buscar Diagnostico: 
+#LOV TERCEROS
+tercerosT=Terceros
+buscarT=Buscar Tercero: 
