--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto.properties
@@ -51,16 +51,16 @@ solucionesformulas=El registro se encuentra en la tabla SOLUCIONES FORMULAS, no 
 #Nuevo Registro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar una Nueva Novedad
-codigoN=Codigo: 
+codigoN=*Codigo: 
 nombreN=Nombre Empleado: 
-fechainicialN=Fecha Inicial: 
+fechainicialN=*Fecha Inicial: 
 fechafinalN=Fecha Final: 
-valorN=Valor: 
+valorN=*Valor: 
 saldoN=Saldo: 
 descripcionN=Descripcion Periodicidad: 
 nitN=N.I.T: 
 nombreterceroN=Nombre Tercero: 
-formulaN=Formula: 
+formulaN=*Formula: 
 horasdiasN=Horas/D\u00edas: 
 minutoshorasN=Minutos/Horas: 
 tipoN=Tipo: 
@@ -70,7 +70,7 @@ porfuera=PAGO POR FUERA
 #Inconsistencia
 inconsistencia=La fecha inicial de una Novedad no puede ser menor a la fecha de ingreso del Empleado.
 #Fechas
-fechas=La fecha inicial de una Novedad no puede ser mayor a la fecha final de la misma.
+fechas=Existe una inconsistencia entre la fecha inicial y la fecha final. Por favor, verifique las fechas.
 #EDITAR
 editarEmpleadosCodigos=Empleado Codigo
 editarEmpleadosNombres=Empleado Nombre
@@ -148,3 +148,4 @@ validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=Salir
