--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -336,3 +336,4 @@ errorAcumularDiferencia=El periodo a procesar de autoliquidaciones no coincide c
 acumularDiferenciaOK=\u00bf Desea continuar con el proceso ?
 headerIbc=Valor IBC
 editarTipoEntidadD=Tipo Entidad
+operacionEnProceso=Operacion en proceso. Por favor, espere ...
