--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/unidad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/unidad.properties
@@ -47,6 +47,7 @@ atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nuevo registro es necesario adicionar:
+existe=El c\u00f3digo que ingreso ya est\u00e1 registrado, por favor ingrese un c\u00f3digo distinto
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
