--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -337,3 +337,4 @@ acumularDiferenciaOK=\u00bf Desea continuar con el proceso ?
 headerIbc=Valor IBC
 editarTipoEntidadD=Tipo Entidad
 operacionEnProceso=Operacion en proceso. Por favor, espere ...
+mostrarTodo=[Mostrar Todos]
