--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales.properties
@@ -111,7 +111,11 @@ aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nuevo registro es necesario adicionar:
 validacionCodigoJL=El c\u00f3digo que ingreso ya est\u00e1 registrado, por favor ingrese un c\u00f3digo distinto
+validacionDiaSL=El d\u00eda que ingreso ya est\u00e1 registrado, por favor ingrese un d\u00eda distinto
 validacionHorasJL=Los siguientes campos deben tener un valor mayor que 0: 
+validaciondescripcion=El campo modificado no puede estar vac\u00edo
+validacionHorasSL=En los siguientes campos el valor ingresado no est\u00e1n dentro del rango permitido (0-23), por favor ingrese un valor dentro del rango: 
+validacionMinutosSL=En los siguientes campos el valor ingresado no est\u00e1n dentro del rango permitido (0-59), por favor ingrese un valor dentro del rango: 
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
