--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
@@ -64,6 +64,7 @@ aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nuevo registro es necesario adicionar:
 validacionCodigo=El c\u00f3digo que ingreso ya est\u00e1 registrado, por favor ingrese un c\u00f3digo distinto
+validacionCodigodos=El campo modificado no puede estar vac\u00edo
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
