--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -78,10 +78,59 @@ cuentaDebito=Cuenta Debito
 tercero=Tercero
 concepto=Concepto
 valor=Valor
-editarProcesoGenerado=
-editarEmpleadoGenerado=
-editarCreditoGenerado=
-editarDebitoGenerado=
-editarTerceroGenerado=
-editarValorGenerado=
-editarConceptoGenerado=
+editarProcesoGenerado=Proceso - Generado
+editarEmpleadoGenerado=Empleado - Generado
+editarCreditoGenerado=Cuenta Credito
+editarDebitoGenerado=Cuenta Debito
+editarTerceroGenerado=NIT Tercero
+editarValorGenerado=Valor - Generado
+editarConceptoGenerado=Concepto - Generado
+enviar=Enviar
+deshacer=[Deshacer]
+reportecontrol=Reporte de Control
+totalC=Total Credito: 
+totalD=Total Debito: 
+intercontotal=Contabilizados Con Total
+empleado=Empleado
+cuenta=Cuenta
+valorDebito=Valor Debito
+valorCredito=Valor Credito
+centroCosto=Centro Costo
+editarEmpleadoIntercon=Empleado - Total
+editarTerceroIntercon=Tercero - Total
+editarCuentaIntercon=Cuenta - Total
+editarDebitoIntercon=Valor Debito
+editarCreditoIntercon=Valor Credito
+editarConceptoIntercon=Concepto -  Total
+editarCentroCostoIntercon=Centro Costo - Total
+empleadoX=Empleado
+cuentaX=Cuenta
+terceroX=Tercero
+debitoXX=Valor_Debito
+debitoX=Valor Debito
+creditoXX=Valor_Credito
+creditoX=Valor Credito
+conceptoX=Concepto
+centroCostoXX=Centro_Costo
+centroCostoX=Centro Costo
+valorX=Valor
+cuentaDXX=Cuenta_Debito
+cuentaDX=Cuenta Debito
+cuentaCXX=Cuenta_Credito
+cuentaCX=Cuenta Credito
+nombreEmpleadoXX=Nombre_Empleado
+nombreEmpleadoX=Nombre Empleado
+generarPlano=Generar Plano
+cerrarPeriodo=Cerrar Periodo Contable
+tipoPlano=Tipo Plano: 
+detallado=Detallado
+semiDetallado=Semi-Detallado
+resumido=Resumido
+anteriorContabilizacion=La ultima interfase enviada fue: 
+nuncaContabilizo=Nunca se ha realizado una contabilizaci\u00f3n
+errorFechasParametros=Las fechas ingresadas no concuerdan con las fechas parametros. Por favor, revisar las fechas para continuar.
+anularComprobantesCerrados=Se dispone a anular un comprobante. \u00bfEsta seguro de continuar y anular el archivo?
+procesoDeshacer=Se dispone a deshacer el proceso de contabilizacion \u00bfEsta seguro de Continuar con el proceso?
+paso1CerrarPeriodo=En este momento va a cerrar el periodo CONTABLE para el proceso:
+paso2CerrarPeriodo=Est\u00e1 totalmente seguro?
+procesoSinDatos=El proceso no ha retornado ningun resultado en la busqueda
