--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -250,3 +250,4 @@ segundoApellidoXX=Segundo_Apellido
 nombreX=Nombre
 msgborrarLiquidacion=\u00bfEsta seguro(a)  que desea borrar la liquidaci\u00f3n?
 msgborrarLiquidacionPorFuera=\u00bfEsta seguro(a) que desea borrar la liquidaci\u00f3n de pagos por fuera de nomina?
+confirmarProcesoInterfaceContableTotal=No olvide que antes de generar la interfase con CONTABILIDAD se debio enviar los datos a tesoreria y tener la nomina cerrada. \u00bfDesea continuar?
