--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -13,14 +13,14 @@ eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
 #RASTRO
-confirmarRastro=La tabla 'VIGENCIASREFORMASLABORALES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla VIGENCIASREFORMASLABORALES tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'INTERCON_TOTAL' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla INTERCON_TOTAL tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASREFORMASLABORALES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'INTERCON_TOTAL' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
