--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
@@ -78,3 +78,57 @@ cuentaDebito=Cuenta Debito
 tercero=Tercero
 concepto=Concepto
 valor=Valor
+anteriorContabilizacion=La ultima interfase enviada fue: 
+nuncaContabilizo=Nunca se ha realizado una contabilizaci\u00f3n
+errorFechasParametros=Las fechas ingresadas no concuerdan con las fechas parametros. Por favor, revisar las fechas para continuar.
+anularComprobantesCerrados=Se dispone a anular un comprobante. \u00bfEsta seguro de continuar y anular el archivo?
+procesoDeshacer=Se dispone a deshacer el proceso de contabilizacion \u00bfEsta seguro de Continuar con el proceso?
+paso1CerrarPeriodo=En este momento va a cerrar el periodo CONTABLE para el proceso:
+paso2CerrarPeriodo=Est\u00e1 totalmente seguro?
+procesoSinDatos=El proceso no ha retornado ningun resultado en la busqueda
+deshacer=[Deshacer]
+reportecontrol=Reporte de Control
+empleado=Empleado
+cuenta=Cuenta
+valorDebito=Valor Debito
+valorCredito=Valor Credito
+centroCosto=Centro Costo
+totalC=Total Credito: 
+totalD=Total Debito: 
+cerrarPeriodo=Cerrar Periodo Contable
+enviar=Contabilizar
+contabilizadosSAP=Contabilizados SAP BO V8
+numDocumento=Num. Documento
+fechaGenerada=F. G. 
+textFechaGenerada=Fecha Generacion
+proyecto=Proyecto
+lote=Lote
+fechaVencimiento=Fecha Vencimiento
+editarProcesoIntercon=Proceso - SAP
+editarProyectoIntercon=Proyecto - SAP
+editarLoteIntercon=Lote - SAP
+editarFechaVParametro=Fecha Expiracion
+numDocumentoXX=Num_Documento
+numDocumentoX=Num Documento
+fechaGeneracionXX=Fecha_Generacion
+proyectoX=Proyecto
+loteX=Lote
+fechaVXX=Fecha_Vencimiento
+editarEmpleadoIntercon=Empleado - SAP
+editarTerceroIntercon=Tercero - SAP
+editarCuentaIntercon=Cuenta - SAP
+editarDebitoIntercon=Valor Debito
+editarCreditoIntercon=Valor Credito
+editarConceptoIntercon=Concepto -  SAP
+editarCentroCostoIntercon=Centro Costo - SAP
+enviarSAPBO=Enviar a SAPBO
+HISTORICO=Ver Historico
+paso1Recon=En este momento va a Recontabilizar y este proceso se va a tener en cuenta la configuraci\u00f3n contable de conceptos de n\u00f3mina, para que tenga efecto debe estar en estado GENERADO
+paso2Recon=Est\u00e1 totalmente seguro?
+paso3Recon1=Va a Recontabilizar va del  : 
+paso3Recon2=Est\u00e1 seguro?
+consecutivo=Consecutivo
+mensaje=Mensaje
+empresaSAP=Empresa SAP
+fecha=Fecha
+erroresM=ERRORES
