--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
@@ -115,3 +115,5 @@ descripcione=Descripcion
 clasee=Clase de Ausentismo
 porcentajeliquidacione=Porcentaje Liquidaci\u00f3n
 restadiasincapacidade=Resta D\u00edas Incapacidad
+#Duplicar Registro CAUSA AUSENTISMO
+duplicarregistro=Duplicar Registro Causa Ausentismo
