--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
@@ -125,10 +125,24 @@ enviarSAPBO=Enviar a SAPBO
 HISTORICO=Ver Historico
 paso1Recon=En este momento va a Recontabilizar y este proceso se va a tener en cuenta la configuraci\u00f3n contable de conceptos de n\u00f3mina, para que tenga efecto debe estar en estado GENERADO
 paso2Recon=Est\u00e1 totalmente seguro?
-paso3Recon1=Va a Recontabilizar va del  : 
+paso3Recon1=Va a Recontabilizar del  : 
 paso3Recon2=Est\u00e1 seguro?
 consecutivo=Consecutivo
 mensaje=Mensaje
 empresaSAP=Empresa SAP
 fecha=Fecha
 erroresM=ERRORES
+contadoCeroPerContable=Este periodo de tiempo ya fue cerrado !
+errorRecon=No se puede Recontabilizar ya que nunca ha sido Contabilizado.
+empleadoX=Empleado
+terceroX=Tercero
+cuentaX=Cuenta
+debitoXX=Valor_Debito
+debitoX=Valor Debito
+creditoXX=Valor_Credito
+creditoX=Valor Credito
+conceptoX=Concepto
+centroCostoXX=Centro_Costo
+centroCostoX=Centro Costo
+numDocumentoN=Num. Documento: 
+fechaGeneradaN=Fecha Expiracion: 
