--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -250,3 +250,13 @@ segundoApellidoXX=Segundo_Apellido
 nombreX=Nombre
 msgborrarLiquidacion=\u00bfEsta seguro(a)  que desea borrar la liquidaci\u00f3n?
 msgborrarLiquidacionPorFuera=\u00bfEsta seguro(a) que desea borrar la liquidaci\u00f3n de pagos por fuera de nomina?
+#Dialogos Borrar Empleado
+noeliminar=Este empleado ya tiene acumulados de n\u00f3mina por tal motivo no lo puede eliminar.
+paso1=En este momento va a eliminar un empleado
+paso2=\u00bfEst\u00e1 totalmente seguro?
+paso3=Va a eliminar al Empleado: 
+paso4=Eliminaci\u00f3n Exitosa...
+titulopaso1=Paso 1 de 4
+titulopaso2=Paso 2 de 4
+titulopaso3=Paso 3 de 4
+titulopaso4=Paso 4 de 4
