--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -260,3 +260,5 @@ titulopaso1=Paso 1 de 4
 titulopaso2=Paso 2 de 4
 titulopaso3=Paso 3 de 4
 titulopaso4=Paso 4 de 4
+confirmarProcesoInterfaceContableTotal=No olvide que antes de generar la interfase con CONTABILIDAD se debio enviar los datos a tesoreria y tener la nomina cerrada. \u00bfDesea continuar?
+
