--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -135,3 +135,12 @@ paso1CerrarPeriodo=En este momento va a cerrar el periodo CONTABLE para el proce
 paso2CerrarPeriodo=Est\u00e1 totalmente seguro?
 procesoSinDatos=El proceso no ha retornado ningun resultado en la busqueda
 contadoCeroPerContable=Este periodo de tiempo ya fue cerrado !
+operacionEnProceso=Operacion en proceso. Por favor espere un momento...
+paso1Recon=En este momento va a Recontabilizar y este proceso se va a tener en cuenta la configuraci\u00f3n contable de conceptos de n\u00f3mina, para que tenga efecto debe estar en estado GENERADO
+paso2Recon=Est\u00e1 totalmente seguro?
+paso3Recon1=Va a Recontabilizar del  : 
+paso3Recon2=Est\u00e1 seguro?
+errorRecon=No se puede Recontabilizar ya que nunca ha sido Contabilizado.
+reporteExito=Reporte Ejecutado con Exito
+planoGeneradoOK=El archivo plano del reporte se creo satisfactoriamente en la siguiente ruta: 
+deseaGuardarTxt=Desea guardar el archivo anterior en su equipo?
