--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbope.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbope.properties
@@ -132,3 +132,4 @@ conceptoX=Concepto
 centroCostoXX=Centro_Costo
 centroCostoX=Centro Costo
 numDocumentoN=Num. Documento: 
+operacionEnProceso=Operacion en proceso. Por favor espere un momento...
