--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
@@ -146,3 +146,4 @@ centroCostoXX=Centro_Costo
 centroCostoX=Centro Costo
 numDocumentoN=Num. Documento: 
 fechaGeneradaN=Fecha Expiracion: 
+operacionEnProceso=Operacion en proceso. Por favor espere un momento...
