--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/usuario.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/usuario.properties
@@ -20,7 +20,7 @@ alias=Alias
 pantalla=Pantalla
 activo=A
 crear=Crear
-eliminar=Eliminar
+eliminarR=Eliminar
 desbloquear=Desbloquear
 resetear=Reiniciar
 clonar=Clonar Usuario
@@ -106,10 +106,10 @@ activoXX=Activo
 #NUEVO REGISTRO USUARIO
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingrese el nuevo Usuario
-personaN=Nombre del Usuario: 
-perfilN=Perfil: 
-aliasN=Alias: 
-pantallaN=Pantalla: 
+personaN=* Nombre del Usuario: 
+perfilN=* Perfil: 
+aliasN=* Alias: 
+pantallaN=* Pantalla: 
 activoN=Activo: 
 #Duplicar Registro USUARIO
 duplicarregistro=Duplicar Registro Usuario
