--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp.properties
@@ -133,3 +133,5 @@ centroCostoXX=Centro_Costo
 centroCostoX=Centro Costo
 numDocumentoN=Num. Documento: 
 operacionEnProceso=Operacion en proceso. Por favor espere un momento...
+descargar=Descargar
+archivoDescargado=El documento fue descargado en la raiz del disco C
