--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8.properties
@@ -147,3 +147,7 @@ centroCostoX=Centro Costo
 numDocumentoN=Num. Documento: 
 fechaGeneradaN=Fecha Expiracion: 
 operacionEnProceso=Operacion en proceso. Por favor espere un momento...
+descargar=Descargar
+reporteExito=Reporte Ejecutado con Exito
+planoGeneradoOK=El archivo plano del reporte se creo satisfactoriamente en la siguiente ruta: 
+deseaGuardarTxt=Desea guardar el archivo anterior en su equipo?
