--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -144,3 +144,4 @@ errorRecon=No se puede Recontabilizar ya que nunca ha sido Contabilizado.
 reporteExito=Reporte Ejecutado con Exito
 planoGeneradoOK=El archivo plano del reporte se creo satisfactoriamente en la siguiente ruta: 
 deseaGuardarTxt=Desea guardar el archivo anterior en su equipo?
+descargar=Descargar
