--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.commons-fileupload-1.3.jar=..\\Librerias\\commons-fileupload-1.3.
 file.reference.commons-io-2.4-src.zip=..\\Librerias\\commons-io-2.4-src.zip
 file.reference.commons-io-2.4.jar=..\\Librerias\\commons-io-2.4.jar
 file.reference.commons-lang3-3.1.jar=..\\Librerias\\commons-lang3-3.1\\commons-lang3-3.1.jar
+file.reference.commons-net-3.3.jar=..\\Librerias\\commons-net-3.3.jar
 file.reference.iText-2.1.7.jar=..\\Librerias\\itext-2.1.7\\iText-2.1.7.jar
 file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
@@ -72,7 +73,8 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.1.jar}:\
     ${reference.DesignerRHN-ejb.dist}:\
     ${file.reference.jasperreports-5.5.0.jar}:\
-    ${file.reference.primefaces-3.5-V1.0.jar}
+    ${file.reference.primefaces-3.5-V1.0.jar}:\
+    ${file.reference.commons-net-3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
