--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbovca.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbovca.properties
@@ -133,3 +133,7 @@ centroCostoXX=Centro_Costo
 centroCostoX=Centro Costo
 numDocumentoN=Num. Documento: 
 operacionEnProceso=Operacion en proceso. Por favor espere un momento...
+descargar=Descargar
+reporteExito=Reporte Ejecutado con Exito
+planoGeneradoOK=El archivo plano del reporte se creo satisfactoriamente en la siguiente ruta: 
+deseaGuardarTxt=Desea guardar el archivo anterior en su equipo?
