--- a/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
@@ -29,6 +29,7 @@ file.reference.commons-fileupload-1.3.jar=..\\Librerias\\commons-fileupload-1.3.
 file.reference.commons-io-2.4.jar=..\\Librerias\\commons-io-2.4.jar
 file.reference.commons-javaflow-20060411.jar=..\\Librerias\\Librerias_Reportes\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.3.jar=..\\Librerias\\Librerias_Reportes\\commons-logging-1.1.3.jar
+file.reference.commons-net-3.3.jar=..\\Librerias\\commons-net-3.3.jar
 file.reference.groovy-all-2.1.7.jar=..\\Librerias\\Librerias_Reportes\\groovy-all-2.1.7.jar
 file.reference.itext-2.1.7.jar=..\\Librerias\\Librerias_Reportes\\itext-2.1.7.jar
 file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.jasperreports-5.5.0.jar}:\
     ${file.reference.jxl.jar}:\
     ${file.reference.jfreechart-1.0.17.jar}:\
-    ${file.reference.primefaces-3.5.jar}
+    ${file.reference.primefaces-3.5.jar}:\
+    ${file.reference.commons-net-3.3.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
