--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atparametrotiempo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atparametrotiempo.properties
@@ -91,3 +91,12 @@ mensajeProgramarTurno=Se disponer a programar turnos. Parametros: Fecha Desde, F
 mensajeDesprogramarTurno=Se disponer a desprogramar turnos. Parametros: Fecha Desde, Fecha Hasta, Cuadrilla
 mensajeSimularMarcacion=Se disponer a simular marcacion, recuerque debe programar un turno con anterioridad. Parametros: Fecha Desde, Fecha Hasta
 mensajeEliminarSimulacion=Se disponer a eliminar marcacion, recuerque debe programar un turno con anterioridad. Parametros: Fecha Desde, Fecha Hasta
+tiempoFechaDesde=Tiempo Fecha Desde:
+tiempoFechaHasta=Tiempo Fecha Hasta: 
+errorHorasFechas=La hora ingresada es mayor a 23:59
+editarParametroHoraDesde=Hora Fecha Desde
+editarParametroHoraHasta=Hora Fecha Hasta
+horaFechaDesdeXX=Hora_Fecha_Desde
+horaFechaDesdeX=Hora Fecha Desde
+horaFechaHastaXX=Hora_Fecha_Hasta
+horaFechaHastaX=Hora Fecha Hasta
