--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ataprobacionhe.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ataprobacionhe.properties
@@ -1,4 +1,4 @@
-titulo=Aprovacion Horas Extras
+titulo=Aprobacion Horas Extras
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -36,3 +36,66 @@ cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 salir=Salir
 operacionEnProceso=Operacion en proceso. Por favor espere...
+buscarEmpleados=Buscar Empleado
+mostrarTodos=Mostrar Todos
+conceptosAAprobar=Conceptos A Aprobar
+aprobado=Aprobado
+estructuraAprobada=Estructura Aprobada
+numDocumento=Numero Documento
+nombreEmpleado=Nombre Empleado
+horas=Horas
+minutos=Minutos
+novedad=Novedad
+estado=Estado
+paso=Paso
+fechaPago=Fecha Pago
+observaciones=Observaciones
+usuarioConectado=Usuario Conectado
+infoUsuario=Autorice las horas extras asignadas acorde a su perfil
+flujosAprobados=Flujos Aprobados
+detalles=Detalles
+siguienteA=Siguiente A.
+aprobadoX=Aprobado
+siguienteAproXX=Siguiente_A.
+siguienteAproX=Siguiente A.
+numeroDocumentoXX=Numero_Documento
+numeroDocumentoX=Numero Documento
+nombreEmpleadoXX=Nombre_Empleado
+nombreEmpleadoX=Nombre Empleado
+horasX=Horas
+minutosX=Minutos
+novedadX=Novedad
+estadoX=Estado
+pasoX=Paso
+fechaPagoXX=Fecha_Pago
+observacionesX=Observaciones
+estructuraM=Estructuras
+buscarEA=Buscar Estructura: 
+codigo=Codigo
+nombre=Nombre
+empleadoM=Empleados
+buscarE=Buscar Empleado: 
+editarCabeceraAprobado=Aprobado - Concepto
+editarCabeceraSiguiente=Siguiente A. - Concepto
+editarCabeceraNumDocumento=Numero Documento
+editarEmplNombre=Nombre Empleado
+editarCabeceraHoras=Horas - Concepto
+editarCabeceraMinuto=Minutos - Concepto
+editarCabeceraNovedad=Novedad - Concepto
+editarCabeceraEstado=Estado - Concepto
+editarCabeceraPaso=Paso - Concepto
+editarCabeceraFechaPago=Fecha Pago - Concepto
+editarCabeceraObservacion=Observacion - Concepto
+editarFlujoProceso=Proceso - Flujo
+editarFlujoFecha=Fecha - Flujo
+procesoAutorizados=Procesos Autorizados Dentro del Flujo de Aprobacion
+fecha=Fecha
+procesoAutorizadoXX=Procesos_Autorizados_Dentro_del_Flujo_de_Aprobacion
+procesoAutorizadoX=Procesos Autorizados Dentro del Flujo de Aprobacion
+fechaX=Fecha
+procesoAutorizados2=Procesos Autorizados Dentro...
+concepto=Concepto
+editarDetalleConcepto=Concepto - Detalle
+editarDetalleFecha=Fecha - Detalle
+editarDetalleObservacion=Observaciones - Detalle
+conceptoX=Concepto
