Andres Pineda --> 31/10/2014 WAR

--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.commons-lang3-3.1.jar=..\\Librerias\\commons-lang3-3.1\\commons-l
 file.reference.commons-net-3.3.jar=..\\Librerias\\commons-net-3.3.jar
 file.reference.iText-2.1.7.jar=..\\Librerias\\itext-2.1.7\\iText-2.1.7.jar
 file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
+file.reference.log4j-1.2.17.jar=..\\Librerias\\log4j-1.2.17.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-excelant-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-excelant-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
@@ -74,7 +75,8 @@ javac.classpath=\
     ${reference.DesignerRHN-ejb.dist}:\
     ${file.reference.jasperreports-5.5.0.jar}:\
     ${file.reference.primefaces-3.5-V1.0.jar}:\
-    ${file.reference.commons-net-3.3.jar}
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
