--- a/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.itext-2.1.7.jar=..\\Librerias\\Librerias_Reportes\\itext-2.1.7.ja
 file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
 file.reference.jfreechart-1.0.17.jar=..\\Librerias\\jfreechart-1.0.17.jar
 file.reference.jxl.jar=..\\Librerias\\jxl.jar
+file.reference.log4j-1.2.17.jar=..\\Librerias\\log4j-1.2.17.jar
 file.reference.ojdbc6.jar=..\\Librerias\\ojdbc6.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
@@ -72,7 +73,8 @@ javac.classpath=\
     ${file.reference.jxl.jar}:\
     ${file.reference.jfreechart-1.0.17.jar}:\
     ${file.reference.primefaces-3.5.jar}:\
-    ${file.reference.commons-net-3.3.jar}
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
