4 de febrero de 2016 Ximena Valero Se adicionan cambios de optimización pendientes por revisar.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -31,6 +31,8 @@ descripcionN=Descripci\u00f3n:
 ciudadN=Ciudad: 
 #Duplicar Registro
 duplicarregistro=Duplicar Registro
+validacioNuevaVigencia=Para agregar una nueva vigencia es necesario adicionar: 
+fechas=La fecha ingresada ya est\u00e1 registrada. Por favor, ingrese una fecha distinta.
 #Editar
 fechaE=Fecha Vigencia Ubicaciones
 descripcionE=Descripcion
@@ -66,3 +68,5 @@ errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con s
 salir=Salir
 fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
 fechaVacia=La fecha no puede ser vacia.
+#VALIDACIONES
+validacioModificarVigenciaFechas=Al modificar no pueden haber:
