4 de febrero de 2016 Edwin Hastamorir Modificación al diseño de NominaF y al Template. Corrección al código de ControlEmplVigenciasAfiliaciones3. Adición de nuevas imágenes.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -1,5 +1,5 @@
 #Titulo y Fieldsets
-titulo=Sistema de Recursos Humanos - Principal - Designer Software
+titulo=Designer.NOM
 tipopersonal=Tipo Personal
 informacionpersonal=Informaci\u00f3n Personal
 informacionlaboral=Informaci\u00f3n Laboral
@@ -141,7 +141,7 @@ reporteslaborales1=REPORTES LABORALES: Permite Generar Reportes
 reporteslaborales2= Preestablecidos de datos laborales.
 bienvenido=Bienvenido(a):
 #TAB DE NOMINA!!!!!!!!!!!!!!!
-periodoeneltiempodesde=PERIODO EN EL TIEMPO DESDE: 
+periodoeneltiempodesde=DESDE: 
 hasta= HASTA:
 corteal= CORTE AL: 
 propiedadesdenomina=Propiedades de N\u00f3mina
