09/02/2016 Juan Carlos + Optimizacion de diferentes funcionalidades en los controladores y vistas de las paginas:  - EmplVigenciaLocalizacion  - EmplVigenciaSueldo  - EmplMvrs  - EmplVacaPendiente  - EmplVigenciaReformaLaboral  - EmplLegislacionLaboral  - EmplVigenciaJornada

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
@@ -13,6 +13,7 @@ nuevo=Nuevo Registro
 eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
+salir=Salir
 #Tabla
 inicial=Inicial
 final=Final
