--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -37,7 +37,7 @@ codigoC=C\u00f3digo
 descripcionC=Descripcion
 #Dialogo Seleccionar tabla Rastro
 rastros=Rastros Para Tablas Historicos Sueldos
-verificarRastrosTablas=Seleccione la tabla para consultar rastro HISTORICO
+verificarRastrosTablas=Seleccionar tabla para consultar rastro HISTORICO
 mvr=M V R
 otros=Otros Certificados
 #Dialogo nuevo registro cual tabla
