--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -76,3 +76,4 @@ errorRegNew=Los campos Fecha Inicial-Fecha Final-Estado-Dias Pendientes son obli
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a 01/01/1900.
 errorFechaContratacion=La fechas ingresadas son menores a la fecha de contratacion del empleado.
 salir=Salir
+seleccionarRegistro=Por favor seleccione un registro.
