--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -15,6 +15,7 @@ nuevo=Nueva Vigencia Jornada
 eliminar=Borrar Vigencia Jornada
 duplicar=Duplicar Vigencia Jornada
 rastro=Rastro
+salir=Salir
 #Tablas
 fecha=Fecha
 nombrejornada=Nombre Jornada
@@ -34,7 +35,7 @@ codigoD=Codigo
 #Confirmar Guardar VJ
 desea=\u00bfDesea guardar la nueva Vigencia Jornada?
 #VERIFICAR RASTRO
-seleccionar=Seleccionar la tabla para generar proceso de rastro
+seleccionar=Seleccionar tabla para consultar rastro HISTORICO
 vj=Vigencia Jornada
 dd=Descanso en Dinero
 dt=Descanso en Tiempo
@@ -114,11 +115,11 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar una nueva jornada es necesario adicionar:
+validacionNuevo=Para agregar un nuevo registro es necesario ingresar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 errorFechas = La fecha de vigencia es menor a 01/01/1900.
 errorFechaDescanso=La fecha final es menor a la fecha inicial.
 errorNullDescanso=Los campos de fecha inicial y fecha final son obligatorios.
-salir=Salir
+seleccionarRegistroJT=Por favor seleccione un registro de Jornada de Trabajador.
