--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -16,6 +16,7 @@ nuevo=Nueva Vigencia Localizacion
 eliminar=Borrar Vigencia Localizacion
 duplicar=Duplicar Vigencia Localizacion
 rastro=Rastro
+salir=Salir 
 #Tabla de Arriba
 fecha=Fecha
 centrocostos=Centro Costos
@@ -25,8 +26,8 @@ proyecto=Proyecto
 #Prorrateo por centro de costo
 centrodecostos=Centro de Costos
 p=P(%)
-inicial=Fecha Inicial
-final=Fecha Final
+inicial=Inicial
+final=Final
 subporcentaje=SubPorcentaje
 #LOV LOCALIZACION
 localizacionL=Localizacion
@@ -52,7 +53,7 @@ localLP=Localizacion
 empresaLP=Empresa
 #Verificar Rastros Tablas
 rastros=Rastros para tablas Historicos Localizaciones
-seleccionar=Seleccione la tabla para generar proceso de rastro
+seleccionar=Seleccione la tabla para consultar rastros Historicos
 vl=Vigencia Localizacion
 vp=Vigencia Prorrateo
 vpp=Vigencia Prorrateo Proyecto
@@ -64,7 +65,7 @@ ppcc=Prorrateo por Centro de Costos
 ppp=Prorrateo por Proyecto
 #Nuevo registro VL
 nuevoregistroVL=Nuevo Registro
-ingresarnuevoVL=Ingresar una nueva informacion del empleado
+ingresarnuevoVL=Ingresar una nueva localizaci\u00f3n del empleado
 fechavigenciaVL=Fecha Vigencia: 
 centrocostoVL=Centro Costo: 
 localizacionVL=Localizacion: 
@@ -143,7 +144,7 @@ cancelar=Cancelar
 atencion=ATENCION...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar una nueva localizacion es necesario adicionar:
+validacionNuevo=Para agregar un nuevo registro es necesario ingresar:
 cambiosRealizados=Desea guardar los cambios realizados?
 cambio=Hay cambios sin guardar, desea guardar los cambios?
 refrescar= Refrescar
@@ -153,8 +154,9 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, Desea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
+seleccionarRegistroLE=Por favor seleccione un registro de Localizacion Empleado.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorFecha=La fecha vigencia es menor a 01/01/1900.
-errorRegNewVP=Los campos Fecha Inicial-Porcentaje-Centro Costo son obligatorios.
+negacionNuevaVLP=Los campos Fecha Inicial-Porcentaje-Centro Costo son obligatorios.
 errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
-errorRegNewVPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
+negacionNuevaVLPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
