--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
@@ -12,6 +12,7 @@ nuevo=Nuevo Vigencia Reforma Laboral
 eliminar=Borrar Vigencia Reforma Laboral
 duplicar=Duplicar Vigencia Reforma Laboral
 rastro=Rastro
+salir=Salir
 #Tabla
 fecha=Fecha
 nombre=Nombre Reforma Laboral
