--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -19,6 +19,7 @@ rastro=Rastro
 fecha=Fecha
 motivocambiosueldo=Motivo Cambio Sueldo
 tiposueldo=Tipo Sueldo
+vigenciaRetroactivoHeader:Vigencia R
 vigenciaretroactivo=Vigencia del Retroactivo
 valor=Valor
 observaciones=Observaciones
@@ -53,7 +54,7 @@ empresaTER=Empresa
 nitTER=N.I.T
 #Dialogo Rastros
 rastros=Rastros Para Tablas Historicos Sueldos
-verificarRastrosTablas=Seleccione la tabla para consultar rastro HISTORICO
+verificarRastrosTablas=Seleccionar tabla para consultar rastro HISTORICO
 sueldodelempleado=Sueldo del Empleado
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
@@ -142,3 +143,8 @@ refrescar= Refrescar
 errorFechasVS=La fecha vigencia es menor a 01/01/1900 y/o la vigencia del retroactivo es menor a 01/01/1900.
 errorFechasVA=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 negacionNuevaVA=Los campos Fecha Inicial-Tercero-Tipo Entidad son obligatorios.
+activarRetroactivo=Activar retroactivo
+salir=salir
+#tooltip
+viReTooltip=Vigencia Retroactivo
+activarRTooltip=Activar/Desactivar Retroactivo
