9 de febrero de 2016 Ximena Valero Se adicionan cambios de optimización y funcionalidad en las pantallas de EmplVigenciaTipoContrato emplvigencianormalaboral emplviajero EmplUbicacionGeografica emplvigenciaformapago EmplSets
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
@@ -88,3 +88,7 @@ fechaCuentaX=Fecha Cuenta
 cuentaX=Cuenta
 fechaX=Fecha
 salir=Salir
+#HEAD
+tcH=Tipo Cuenta
+#Validaciones
+validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
