--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -82,7 +82,7 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar una nueva vigencia es necesario adicionar:
+validacionNuevo=Para agregar una nueva ubicacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
@@ -101,3 +101,6 @@ fispXX=Fecha_Inicio_Proceso_Sustitucion
 fispH=Fecha Sus.
 fifH=Fecha Flex.
 fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
+#HEAD
+pvH=Reconoce Prima de Vacaci\u00f3n
+scH=Soluci\u00f3n Continuidad
