--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
@@ -74,3 +74,5 @@ totalingresosXX=Total_Ingresos
 totalingresosX=Total Ingresos
 errorRegNew=Los campos Fecha Inicial-Promedio-Tipo Set son obligatorios y/o el promedio es menor a cero y/o el tipo set es diferente de 1 o 2.
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
+#Validaciones
+validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
