--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -17,7 +17,7 @@ duplicar=Duplicar Registro Vacaciones
 rastro=Rastro
 #Tablas
 estado=Estado
-dp=DP
+dp=Dias Pendientes
 inicial=Fecha Inicial
 final=Fecha Final
 total=Total Dias Pendientes
@@ -73,7 +73,12 @@ duplicarregistroVP=Duplicar Registro Vacaciones Pendientes
 cerrado=CERRADO
 abierto=ABIERTO
 errorRegNew=Los campos Fecha Inicial-Fecha Final-Estado-Dias Pendientes son obligatorios.
-errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a 01/01/1900.
+errorFechas=La fecha inicial es mayor a la fecha final y/o son menores a 01/01/1900.
 errorFechaContratacion=La fechas ingresadas son menores a la fecha de contratacion del empleado.
+errorFechaContratacionTras=La fechas ingresadas presentan cruces con anteriores registros.
+errorFechaContratacionMargenAnio=La fechas no estan en el margen de 1 a\u00f1o con respecto a la fecha de contrataci\u00f3n del empleado.
 salir=Salir
 seleccionarRegistro=Por favor seleccione un registro.
+seleccionarRegistroP=Para duplicar por favor seleccione un registro de Vacaciones Pendientes.
+DPro=Dias Provisionados
+DFC=Fecha Contrataci\u00f3n
