--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -160,3 +160,5 @@ errorFecha=La fecha vigencia es menor a 01/01/1900.
 negacionNuevaVLP=Los campos Fecha Inicial-Porcentaje-Centro Costo son obligatorios.
 errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 negacionNuevaVLPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
+#ERROR Porcentajes
+errorPorcentaje=El porcenteje debe ser un numero en el rango de 0 a 100
