17 de febrero de 2016 Ximena Valero Arreglo de Pantalla TipoTrabajador en carpeta Personal. Arreglo de Pantalla Legislacion Laboral en carpeta Nomina.
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -23,6 +23,7 @@ panelPensionadosMensaje=Este bloque se habilita cuando el Tipo Trabajador es un 
 fechainicioP=Fecha Inicio
 fechafinalP=Fecha Final
 porcentajeP=Porcentaje
+porc=P%
 claseP=Clase Pension
 tipoP=Tipo Pensionado
 resolucionP=Resoluci\u00f3n Pension
@@ -118,3 +119,5 @@ errorRegRetiro=El campo fecha retiro es vacio y/o la observacion posee mas de 50
 errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio.
 errorRegNewVTT=Los campos Fecha Vigencia-Tipo Trabajador son obligatorios.
 salir=Salir
+#VALIDACIONES
+validacionFechas=La fecha ya esta registrada, por favor ingrese otra.
