--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
@@ -82,3 +82,9 @@ cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 detalle=Detalle de la formula asociada a la legislacion seleccionada
 salir=Salir
+validacionCodigo=El C\u00f3digo que desea ingresar ya est\u00e1 registrado en el sistema
+#HEADER
+codigoH=C\u00f3digo
+#VALIDACIONES
+validacionReproducirContratoClon=D\u00edgite el Contrato a Actualizar
+validacionReproducirContratOrigen=D\u00edgite el Contrato de Origen
