--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -30,7 +30,10 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
+validacionNuevo=Para agregar un nuevo concepto es necesario adicionar:
+validacionNuevoCod=Para hacer un nuevo registro el codigo debe ser unico, 
+validacionNuevoCod2=El codigo que esta tratando de ingresar esta repetido. 
+validacioNuevoClon=Para clonar debe seleccionar un concepto existente, e ingresar un nuevo Codigo y Descripcion.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
@@ -46,7 +49,7 @@ fecha=Fecha Acum.
 tercero=Nombre Tercero
 estado=Estado
 et=ET
-codigoalternativo=Codigo Alternativo
+codigoalternativo=Cod.A.
 #SOMenu Naturaleza
 neto=NETO
 gasto=GASTO
@@ -127,6 +130,7 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'CONCEPTOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorNoModificar=No se puede modificar el concepto por que ya fue usado en la liquidaci\u00f3n. 
 #Exportar
 codigoX=C\u00f3digo
 descripcionX=Descripci\u00f3n
@@ -145,3 +149,13 @@ codigoalternativoX=C\u00f3digo_Alternativo
 detalle=Detalles del concepto seleccionado
 salir=Salir
 textI=Independiente para el envio a tesoreria
+#Tabla Tooltip
+codigoTtip=C\u00f3digo de Concepto
+codigodTtip=C\u00f3digo de Concepto para agrupar en el despendible
+cuTtip=C\u00f3digo de la Unidad
+conjuntoTtip=Conjunto de conceptos
+fechaTtip=Fecha Acumulaci\u00f3n
+etTtip=Enviar a tesorer\u00eda
+codigoalternativoTtip=Codigo Alternativo
+#Advertencias
+continuar=continuar
