19 de febrero de 2016 Ximena Valero Arreglo de Pantalla Legislacion Laboral en carpeta Nomina.
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
@@ -66,3 +66,12 @@ codigoempresaE=Codigo_Empresa
 codigoempresa=Codigo Empresa
 observacionE=Observacion
 sinregistro=Sin Registros
+#HEADER
+corteH=Fecha de acumulaci\u00f3n para Pago
+puntosH=Empresa
+procesoH=Descripci\u00f3n del proceso
+totalEmpleadosH=N\u00famero total de empleados por el proceso
+observacionH=Observaciones
+puntos=..
+totalEmpleados=#
+Proceso=Proceso
