--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -74,7 +74,7 @@ fechavigenciaVS=*Fecha Vigencia:
 motivocambiosueldoVS=*Motivo Cambio Sueldo: 
 tiposueldoVS=*Tipo Sueldo: 
 retroactivoVS=Retroactivo: 
-vigenciaretroactivoVS=*Vigencia Retroactivo: 
+vigenciaretroactivoVS=Vigencia Retroactivo: 
 valorVS=*Valor: 
 observacionesVS=Observaciones: 
 #DuplicarRegistroVS
@@ -103,7 +103,7 @@ editarFechaInicialVAD=Fecha I. Vigencia Sueldo
 editarFechaFinalVAD=Fecha F. Vigencia Sueldo
 #Dialogos Varios
 guardarCambiosVigenciasAfiliaciones=\u00bfDesea guardar los cambios realizados en Vigencias Afiliaciones?
-negacionNuevaS= Los campos Fecha Vigencia-Fecha Retroactivo-Motivo Cambio Sueldo-Tipo Sueldo-Valor son obligatorios.
+negacionNuevaS= Los campos Fecha Vigencia, Motivo Cambio Sueldo, Tipo Sueldo y Valor son obligatorios.
 negacionBorradoVS=Para eliminar el registro Vigencia Salario es NECESARIO que la Vigencia Afilicion este vacia.
 #EXPORTAR
 fechavigenciaXX=Fecha_Vigencia
