--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
@@ -91,6 +91,7 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
+validacioNuevoClon=Para clonar debe seleccionar una formula existente e ingresar nombre corto y nombre Largo.
 validacionNuevo=Para agregar una nueva formula es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
