24 de febrero de 2016 Edwin Hastamorir Los iconos de busqueda avanzada y de navegación por registro ahora son png y se ubican en la carpeta Imagenes/Iconos/ Se reorganizaron los elementos alrededor del nombre del empleado. Se unificó el nombre del empleado en una sola caja de texto. Falta alinear los elementos pues los navegadores no las organizan de manera unificada. Hay que adicionar los íconos de la navegabilidad por registro en la carpeta personal.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -29,7 +29,7 @@ atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Refrescar
 #Tipo Personal
 cargosdesempe\u00f1ados1=CARGOS DESEMPE\u00d1ADOS: Observe y/o ingrese todos los cargos
 cargosdesempe\u00f1ados2=que el empleado ha desempe\u00f1ado dentro de la empresa.
@@ -43,7 +43,7 @@ informacionretirados=Ver Informaci\u00f3n del Personal Retirado
 informacionaspirantes=Ver Informaci\u00f3n del Personal Aspirante
 #Panel Derecho Superior
 codigo=C\u00f3digo
-primerapellido=Primer Apellido
+primerapellido=Nombre completo
 segundoapellido=Segundo Apellido
 nombre=Nombre
 #Botones con Imagen
@@ -230,8 +230,8 @@ tipo=Tipo
 #LOV Empleados
 empleadosE=Empleados
 #Buscar y mostrar
-Buscar=Buscar Empleado...
-mostrar=Mostrar Todos
+Buscar=Buscar
+mostrar=Todos
 toolTipNovedades1=Reporte todos los pagos y descuentos
 toolTipNovedades2=que no sean de liquidaci\u00f3n autom\u00e1tica.
 toolTipConcepto1=Propiedades de liquidaci\u00f3n y contabilizaci\u00f3n
