--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -230,8 +230,8 @@ tipo=Tipo
 #LOV Empleados
 empleadosE=Empleados
 #Buscar y mostrar
-Buscar=Buscar
-mostrar=Todos
+Buscar=
+mostrar=
 toolTipNovedades1=Reporte todos los pagos y descuentos
 toolTipNovedades2=que no sean de liquidaci\u00f3n autom\u00e1tica.
 toolTipConcepto1=Propiedades de liquidaci\u00f3n y contabilizaci\u00f3n
